--- a/examples/simple/projectA/docker-compose.yml
+++ b/examples/simple/projectA/docker-compose.yml
@@ -1,13 +1,35 @@
 mysql:
-  image: mysql:latest
+  extends:
+    file: /common-services.yml
+    service: php
+  build: ~/mysql
 
 pgsql:
+  volumes_from: ~
   image: postgres:latest2
-
+  env_file:
+    - ./common.env
+    - ~/apps/web.env
+    - /opt/secrets.env
+  extends:
+    service:
+  ports:
+    - "3000"
+    - 8002:8000
+    - "49100:22"
+    - "127.0.0.1:8001:8001"
 php:
-  build: images/php
+  extends:
+    file: common-services.yml
+    service: webapp
+  container_name: phpcontainer
+  build: ../images/php
   links:
     - pgsql
     - mysql:database
   volumes_from:
     - pgsql
+  volumes:
+    - /var/lib/mysql
+    - ./cache:/tmp/cache
+    - ~/configs:/etc/configs/:ro
